--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -2,11 +2,11 @@ header
   .header-line
     .header-soc
       .wrapper.flex-sb 
-        a(href="tel:+380679047738") 067 904 77 38
+        a.tel(href="tel:+380679047738") 067 904 77 38
         img.logo(src="img/logo.png" alt="Логотип Реклами Поділля")
         +soc-line
     nav.menu.wrapper 
-      ul 
+      ul.flex-sb 
         li
           a(href="#") головна
         li
