--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,9 @@ html(lang="uk")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Реклама Поділля. Розробка Та Виготовлення Зовнішньої Реклами
         link(rel="stylesheet", href="css/styles.css")
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     body 
         include helpers/mixins.pug
 
