--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -3,7 +3,8 @@ header
     .header-soc
       .wrapper.flex-sb 
         a.tel(href="tel:+380679047738") 067 904 77 38
-        img.logo(src="img/logo.png" alt="Логотип Реклами Поділля")
+        a(href="#") 
+          img.logo(src="img/logo.png" alt="Логотип Реклами Поділля")
         +soc-line
     nav.menu.wrapper 
       ul.flex-sb 
@@ -19,14 +20,4 @@ header
           a(href="#") акції
         li
           a(href="#") контактити
-  .header-content
-    .header-adv.flex-sb
-      a(href="#") вивіски
-      span.list-dot 
-      a(href="#") лайтбокси
-      span.list-dot 
-      a(href="#") літери
-      span.list-dot 
-      a(href="#") банери
-    +button('g', '#', 'замовити')
     
