--- a/src/sass/helpers/vars.sass
+++ b/src/sass/helpers/vars.sass
@@ -3,11 +3,19 @@
 /* -------------------------------------------------------------------------- */
 
 $textDark: #191919
+$textTButton: #954079
 
 /* -------------------------------------------------------------------------- */
-/*                                    clors                                   */
+/*                                    colors                                   */
 /* -------------------------------------------------------------------------- */
 
 $primaryBlue: #7FC6E7
 $P-B-gradient: linear-gradient(90deg, #924D83 17.4%, #7EC5E6 85.19%)
-$B-P-gradient: linear-gradient(93.92deg, #7EC5E6 2.71%, #943F78 90.57%)
+$B-P-gradient: linear-gradient(93.92deg, #7EC5E6 0%, #943F78 50%, #7EC5E6)
+$trs: transparent
+
+/* -------------------------------------------------------------------------- */
+/*                                 transition                                 */
+/* -------------------------------------------------------------------------- */
+
+$trs: .5s
