--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,3 +3,78 @@
   
 @import  components/header
 @import  components/footer
+
+.first-screen
+  padding: 150px 0
+  text-align: center
+  background: #eee
+  
+.button
+  display: inline-block
+  font-size: 16rem
+  line-height: 20rem
+  font-weight: 600
+  text-transform: uppercase
+  text-align: center
+  padding: 13px
+  min-width: 250px
+  color: #fff
+  text-decoration: none
+  border-radius: 5px
+  transition: $trs
+
+.g-button
+  background: $B-P-gradient
+  background-size: 200% 100%
+  &:hover 
+    background-position: 100% 0
+
+.t-button
+  position: relative
+  color: $textTButton
+  min-width: 246px
+  padding: 11px
+  z-index: 1
+  &:before 
+    content: ''
+    position: absolute
+    top: -2px
+    left: -2px
+    width: calc(100% + 4px)
+    height: calc(100% + 4px)
+    border-radius: 5px
+    z-index: -2
+    background: $B-P-gradient
+    background-size: 200% 100%
+    transition: $trs
+  &::after
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    left: 0
+    top: 0
+    border-radius: 5px 
+    background: #fff
+    z-index: -1
+    transition: $trs
+  &:hover
+    color: $primaryBlue
+    &::before
+      background-position: 100% 0
+
+section 
+  padding: 100px 0
+
+.sec-title 
+  font-size: 40rem
+  line-height: 49rem
+  font-weight: 600
+  text-transform: uppercase
+  color: $textDark
+
+.sec-desc
+  font-size: 18rem
+  line-height: 22rem
+  color: $textDark
+  margin: 50px 0
