--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -16,18 +16,22 @@ html(lang="uk")
 
 		main 
 			section.first-screen
-				h1 Lorem ipsum dolor sit amet.
-				.header-adv.flex-sb
-					a(href="#") вивіски
-					span.list-dot 
-					a(href="#") лайтбокси
-					span.list-dot 
-					a(href="#") літери
-					span.list-dot 
-					a(href="#") банери
+				h1 розробка та виготовлення зовнішньої реклами
+				ul.adv-list
+					li 
+						a(href="#") вивіски
+					li 
+						a(href="#") лайтбокси
+					li 
+						a(href="#") літери
+					li 
+						a(href="#") банери
 				+button('g', '#', 'замовити')
 			section.order-adv.wrapper 
 				h2.sec-title ПРИДБАТИ ЧИ ЗАМОВИТИ РОЗРОБКУ, ОТРИМАТИ КОНСУЛЬТАЦІЮ - ВСЕ ПО ЗОВНІШНІЙ РЕКЛАМІ В АГЕНЦІЇ "РЕКЛАМА ПОДІЛЛЯ" 
 				p.sec-desc Реклама Поділля – агенція в м. Хмельницькому, що розробляє зовнішню рекламу. Здійснює монтаж рекламних конструкцій. Розробляє, починаючи з 3D макета, виготовляє та монтує вивіски від звичайних щитових вивісок, світлових коробів, лайтбоксів світлових, об’ємних вивісок, до складних дахових вивісок, світлових літер, об’ємних букв, літер з різними способами підсвічування.
+				.preferences.flex-sb 
+					.preference
+						.gradient-bg 
 
 		include components/footer.pug
