--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -39,14 +39,16 @@ body
     bottom: 0
     left: 0
     width: 100%
-    height: 1px
+    height: 1.5px
     background: $P-B-gradient
+    @media screen and ( max-width: 1660px )
+      height: 1px
   .wrapper 
     align-items: center
 
 .tel 
   position: relative
-  font-size: 16rem
+  font-size: 18rem
   line-height: 20rem
   font-weight: 600
   text-transform: uppercase
@@ -70,6 +72,13 @@ body
     width: calc(100% - 30px)
   &:hover 
     color: $primaryBlue
+  @media screen and ( max-width: 1660px )
+    font-size: 16rem
+
+// .logo
+//   transition: $trs
+//   &:hover 
+//     transform: scale(1.1)
 
 .soc-line 
   column-gap: 15px
@@ -81,15 +90,19 @@ body
       svg
         width: 100%
   li,a,svg
-    width: 20px
-    height: 20px
+    width: 25px
+    height: 25px
+  @media screen and ( max-width: 1660px )
+    li,a,svg
+      width: 20px
+      height: 20px
 
 
 .menu 
-  padding: 20px 0
+  padding: 25px 0
   a 
     position: relative
-    font-size: 16rem
+    font-size: 18rem
     line-height: 19.5rem
     font-weight: 700
     color: $textDark
@@ -97,3 +110,7 @@ body
     text-transform: uppercase
     transition: $trs
     +underlineHover
+  @media screen and ( max-width: 1660px )
+    padding: 20px 0
+    a 
+      font-size: 16rem
