--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,7 +31,23 @@ html(lang="uk")
 				h2.sec-title ПРИДБАТИ ЧИ ЗАМОВИТИ РОЗРОБКУ, ОТРИМАТИ КОНСУЛЬТАЦІЮ - ВСЕ ПО ЗОВНІШНІЙ РЕКЛАМІ В АГЕНЦІЇ "РЕКЛАМА ПОДІЛЛЯ" 
 				p.sec-desc Реклама Поділля – агенція в м. Хмельницькому, що розробляє зовнішню рекламу. Здійснює монтаж рекламних конструкцій. Розробляє, починаючи з 3D макета, виготовляє та монтує вивіски від звичайних щитових вивісок, світлових коробів, лайтбоксів світлових, об’ємних вивісок, до складних дахових вивісок, світлових літер, об’ємних букв, літер з різними способами підсвічування.
 				.preferences.flex-sb 
-					.preference
-						.gradient-bg 
+					+preference(
+						'img/sprite.svg#sertificate',
+						'СЕРТИФІКОВАНІ, ЯКІСНІ МАТЕРІАЛИ ДЛЯ ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ',
+					  'Реклама Поділля, співпрацює з постачальниками лише сертифікованих високоякісних матеріалів, безпечної та якісної електрики, підсвітки, що гарантує високу якість та довговічність зовнішньої реклами.',
+						'На всю рекламну продукцію, вивіски, лайтбокси, літери світлові об’ємні, неонові вивіски, банери, штендери, таблички адресні – надається документація, дозволи, та гарантія.'
+					)
+					+preference(
+						'img/sprite.svg#prices',
+						'Вигідні ціни',
+					  'Ми підібрали найдоступніші ціни на вивіски, світлові, фігурні, двосторонні лайтбокси (світловий короб), що дозволять, при цьому, отримати високоякісну зовнішню рекламу розроблену нашими фахівцями.',
+						'Також повноцінну гарантію, всі відповідні дозволи та фінансові документи. Постійне сервісне обслуговування. Наш, майже двадцятирічний досвід у сфері зовнішньої реклами з впевненістю дозволяє гарантувати це!'
+					)
+					+preference(
+						'img/sprite.svg#services',
+						'великий спектр послуг',
+					  'Виготовлення вивіски, лайтбокса, об’ємних літр та загалом зовнішньої реклами в цілому – кропіткий, багатоетапний процес, який в змозі виконати правильно тільки справжні професіонали. Зовнішня реклама – це різноманітність конструкцій, видів і технологій будь-якої складності – лайтбокси, світлові вивіски та світлові букви різного розміру, шрифту, способу підсвітки.',
+						'Також ми пропонуємо  оформлення фасаду комерційного приміщення.'
+					)
 
 		include components/footer.pug
