--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -14,9 +14,13 @@ ul
 html 
   font-size: 1px
 
-body 
+body
   font-size: 14rem
   font-family: 'Montserrat', sans-serif
+  
+a
+  color: $textDark 
+  text-decoration: none
 
 .wrapper 
   width: 86%
@@ -52,8 +56,6 @@ body
   line-height: 20rem
   font-weight: 600
   text-transform: uppercase
-  color: $textDark
-  text-decoration: none
   padding-left: 30px
   transition: $trs
   &::before 
@@ -105,8 +107,6 @@ body
     font-size: 18rem
     line-height: 19.5rem
     font-weight: 700
-    color: $textDark
-    text-decoration: none
     text-transform: uppercase
     transition: $trs
     +underlineHover
