--- a/src/sass/helpers/vars.sass
+++ b/src/sass/helpers/vars.sass
@@ -9,10 +9,11 @@ $textTButton: #954079
 /*                                    colors                                   */
 /* -------------------------------------------------------------------------- */
 
+$trs: transparent
 $primaryBlue: #7FC6E7
 $P-B-gradient: linear-gradient(90deg, #924D83 17.4%, #7EC5E6 85.19%)
 $B-P-gradient: linear-gradient(93.92deg, #7EC5E6 0%, #943F78 50%, #7EC5E6)
-$trs: transparent
+$blockGradient: linear-gradient(308deg, #943F78 0%, #7EC5E6 100%)
 
 /* -------------------------------------------------------------------------- */
 /*                                 transition                                 */
