--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -9,9 +9,9 @@ header
     nav.menu.wrapper 
       ul.flex-sb 
         li
-          a(href="#") головна
+          a(href="#main") головна
         li
-          a(href="#") про нас
+          a(href="#about-us") про нас
         li
           a(href="#") послуги
         li
