--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -13,6 +13,7 @@ ul
 
 html 
   font-size: 1px
+  scroll-behavior: smooth
 
 body
   font-size: 14rem
@@ -33,6 +34,19 @@ a
 /* -------------------------------------------------------------------------- */
 /*                                   header                                   */
 /* -------------------------------------------------------------------------- */
+
+header 
+  padding-top: 173px
+
+.header-line 
+  position: fixed
+  top: 0
+  left: 0
+  width: 100vw
+  height: 173px
+  background-color: rgba(255, 255, 255, 0.90)
+  backdrop-filter: blur(10px)
+  z-index: 10
 
 .header-soc
   position: relative
