--- a/src/pug/helpers/mixins.pug
+++ b/src/pug/helpers/mixins.pug
@@ -37,3 +37,21 @@ mixin preference(img, title, desc1, desc2)
       p=desc2 
     .order
       a.order-link(href="#") замовити 
+
+mixin service(title, desc1, desc2)
+  .service 
+    .service-info.flex-sb 
+      h4=title 
+      <svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 19" id="arrow-down">
+        <path d="M17.5 19L0.179491 0.249997L34.8205 0.25L17.5 19Z" fill="url(#paint0_linear_151_90)"></path>
+        <defs>
+          <linearGradient id="paint0_linear_151_90" x1="2" y1="10.5" x2="35" y2="7" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#7FC6E7"></stop>
+            <stop offset="1" stop-color="#954079"></stop>
+          </linearGradient>
+        </defs>
+      </svg>
+    .service-desc 
+      p=desc1 
+      if desc2
+        p=desc2 
