--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -110,7 +110,7 @@ h1
 /* -------------------------------------------------------------------------- */
 
 section 
-  padding: 100px 0
+  padding-top: 100px
 
 .sec-title 
   font-size: 40rem
@@ -188,3 +188,102 @@ section
     color: #943F78
     &::before 
       background-position-x: -26px
+
+/* -------------------------------------------------------------------------- */
+/*                                  PARTNERS                                  */
+/* -------------------------------------------------------------------------- */
+
+.partners
+  h2 
+    margin-bottom: 40px
+
+.slider-line
+  display: flex
+  column-gap: 40px
+  overflow-x: hidden
+  img 
+    height: 100px
+
+/* -------------------------------------------------------------------------- */
+/*                                  SERVICES                                  */
+/* -------------------------------------------------------------------------- */
+
+.services 
+  .sec-desc 
+    margin: 45px 0 80px
+
+.services-list 
+  h2 
+    margin-bottom: 40px
+
+.service 
+  align-items: center
+  padding: 18px
+  border: 1px solid $textDark
+  border-radius: 3px
+  margin-bottom: 20px
+  overflow: hidden
+  h4 
+    font-size: 18rem 
+    font-weight: 500
+    text-transform: uppercase
+  svg 
+    width: 35px
+    height: 19px
+    transition: $trs
+  p 
+    font-size: 18rem
+    transition: $trs
+    animation: hideDesc 1s linear forwards
+  &.showed-desc 
+    svg 
+      transform: rotate(180deg)
+    p
+      animation: showDesc 1s linear forwards
+
+@keyframes showDesc
+  0%
+    max-height: 0
+    padding-top: 0
+    opacity: 0
+  25%
+    max-height: 3em
+    padding-top: 5px
+    opacity: 0
+  50% 
+    max-height: 6em  
+    padding-top: 10px
+    opacity: 0
+  75% 
+    max-height: 9em
+    padding-top: 10px
+    opacity: 0.5
+  100%
+    max-height: none
+    opacity: 1
+    padding-top: 10px
+
+@keyframes hideDesc
+  0%
+    max-height: 9em
+    opacity: 1
+    padding-top: 10px
+  12.5% 
+    max-height: 6em
+  25% 
+    max-height: 3em
+  50% 
+    max-height: 1em
+    padding-top: 5px
+    opacity: 0
+  75% 
+    max-height: 0em
+  100%
+    max-height: 0
+    padding-top: 0
+    opacity: 0
+
+/* -------------------------------------------------------------------------- */
+/*                            ADVERTISMENT CREATING                           */
+/* -------------------------------------------------------------------------- */
+
