--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -13,7 +13,7 @@ header
         li
           a(href="#about-us") про нас
         li
-          a(href="#") послуги
+          a(href="#services") послуги
         li
           a(href="#") фасади
         li
