--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -27,10 +27,10 @@ html(lang="uk")
 						a(href="#") літери
 					li 
 						a(href="#") банери
-				+button('g', '#', 'замовити')
+				+button('g', '#order', 'замовити')
 			.wrapper
+				a#about-us
 				section.order-adv 
-					a#about-us
 					h2.sec-title ПРИДБАТИ ЧИ ЗАМОВИТИ РОЗРОБКУ, ОТРИМАТИ КОНСУЛЬТАЦІЮ - ВСЕ ПО ЗОВНІШНІЙ РЕКЛАМІ В АГЕНЦІЇ "РЕКЛАМА ПОДІЛЛЯ" 
 					p.sec-desc Реклама Поділля – агенція в м. Хмельницькому, що розробляє зовнішню рекламу. Здійснює монтаж рекламних конструкцій. Розробляє, починаючи з 3D макета, виготовляє та монтує вивіски від звичайних щитових вивісок, світлових коробів, лайтбоксів світлових, об’ємних вивісок, до складних дахових вивісок, світлових літер, об’ємних букв, літер з різними способами підсвічування.
 					.preferences.flex-sb 
@@ -63,6 +63,7 @@ html(lang="uk")
 						img(src="img/fielmann.png", alt="Логотип компанії \"Fielmann\"")
 						img(src="img/technoprostir.png", alt="Логотип компанії \"Technoprostir\"")
 						img(src="img/ukrgazbank.png", alt="Логотип компанії \"Укргазбанк\"")
+				a#services
 				section.services
 					.services-desc
 						h2.sec-title РЕКЛАМНІ ПОСЛУГИ. ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ
@@ -100,9 +101,9 @@ html(lang="uk")
 						)
 				section.creating 
 					h2.sec-title ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ. РОЗРОБКА МОНТАЖ ТА СЕРВІС.
-					ul.adv-examples 
+					ul.adv-examples.flex-sb 
 						li
-							a(href="#") ОБ'ЄМНІ СВІТЛОВІ ЛІТЕРИ
+							a.choosen-item(href="#") об'ємні світлові літери
 						li
 							a(href="#") вивіски. світлові вивіски
 						li
@@ -115,5 +116,32 @@ html(lang="uk")
 							a(href="#") вітрини. наклеювання плівкою ORACAL
 						li
 							a(href="#") штендери. інформаційні щити. вуличні таблички, банери
+					.creating-screen.choosen-screen
+						.fig-list.flex-sb 
+							+creatingFigure(
+								"img/ll_bidonchik.png",
+								"Обʼємні літери для компанії \"БІДОНЧИК\"",
+								"Обʼємні літери для компанії \"БІДОНЧИК\"",
+								"????",
+								"30 СМ"
+							)
+							+creatingFigure(
+								"img/ll_utis.png",
+								"Обʼємні літери для компанії \"ЮТІС\"",
+								"Обʼємні літери для компанії \"ЮТІС\"",
+								"????",
+								"30 СМ"
+							)
+							+creatingFigure(
+								"img/ll_dnipro.png",
+								"Обʼємні літери для компанії \"DNIPRO M\"",
+								"Обʼємні літери для компанії \"DNIPRO M\"",
+								"????",
+								"30 СМ"
+							)
+						article.screen-desc 
+							h2.sec-title На даний час об’ємні букви (літери) є одним з найефективнішим видом зовнішньої реклами в багатьох сферах бізнесу.
+							p.sec-desc Їх Об’ємний 3D-Ефект Дає Змогу Значно Краще Привернути Увагу Потенційного Клієнта До Вашої Рекламної Вивіски, Чи Взагалі До Будь-Якої Зовнішньої Реклами. Гарний ефект об’ємні букви (літери), дають при першій комунікації з потенційним клієнтом, адже це підкреслює імідж компанії та її солідність. Також об’ємні рекламні букви (літери) замовляють для проведення весільних, святкових (дні народження, ювілеї, корпоративи) або іміджевих (презентацій, виставка)фотосесій.
+							+buttonLine
 		include components/footer.pug
 		script(src="js/index.js") 
